--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <input type="file" id="fileUpload" />
-    <input type="button" id="upload" value="Upload" onclick="upload()" />
-    <hr />
-<div id="dvExcel"></div>
+    <h1>Upload</h1>
+    <section id="section-1">
+        <div class="upload">
+            <input type="file" id="file-upload" />
+            <button value="Upload" onclick="upload()"> Upload </button>
+        </div>
+    </section>
+    <section id="section-2" style="display:none">
+        <div class="table-heading">
+            <h2>Column Mapping</h2>
+            <button class="save" onclick="save()">Save</button>
+        </div>
+        <div id="Excel-div"></div>
+    </section>
+
 </body>
 </html>
