--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="section-1">
         <div class="upload">
             <input type="file" id="file-upload" />
-            <button value="Upload" onclick="upload()"> Upload </button>
+            <button class="button" value="Upload" onclick="upload()"> Upload </button>
         </div>
     </section>
     <section id="section-2" style="display:none">
